Fixed icon spacing

--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -5,7 +5,6 @@
 .icon {
     font-size: 36px;
     margin-left: 15%;
-    position: relative;
-    right: 1%;
-    top: 10px;
+    padding: 5px;
+    position: relative;    
 }
